added new projects

--- a/Login page/index.html
+++ b/Login page/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="pass">Forgot Password ?</div>
             <input type = "submit" value = "Login">
-            <div class="signup">Not a member ? <a href="#">Signup</a></div>
+            <div class="signup">Not a member ? <a href="#">SignUp</a></div>
         </form>
     </div>
 </body>
