--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -105,7 +105,7 @@
         }
         main{
             height:60vh;
-            overflow: hidden;;
+            overflow: hidden;
         }
         .profile img{
             width:300px;
